Blue/green deployments for LLO; code cleanup

--- a/core/web/testdata/body/health.html
+++ b/core/web/testdata/body/health.html
@@ -103,5 +103,8 @@
     </details>
 </details>
 <details open>
+        <summary title="RetirementReportCache" class="noexpand"><span class="passing">RetirementReportCache</span></summary>
+</details>
+<details open>
     <summary title="TelemetryManager" class="noexpand"><span class="passing">TelemetryManager</span></summary>
 </details>
